[tool.poetry]
name = "talk-codebase"
version = "0.1.1"
description = "talk-codebase is a powerful tool for querying and analyzing codebases."
authors = ["Saryev Rustam <rustam1997@gmail.com>"]
readme = "README.md"
packages = [{include = "talk_codebase"}]
keywords = ["chatgpt", "openai", "cli"]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.180"
fire = "^0.5.0"
openai = "^0.27.7"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Source" = "https://github.com/rsaryev/talk-codebase"
"Bug Tracker" = "https://github.com/rsaryev/talk-codebase/issues"

[tool.poetry.scripts]
talk-codebase = "talk_codebase.cli:main"


