[tool.poetry]
name = "talk-codebase"
version = "0.1.50"
description = "talk-codebase is a powerful tool for querying and analyzing codebases."
authors = ["Saryev Rustam <rustam1997@gmail.com>"]
readme = "README.md"
packages = [{ include = "talk_codebase" }]
keywords = ["chatgpt", "openai", "cli"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fire = "^0.5.0"
openai = "^0.27.7"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"
halo = "^0.0.31"
urllib3 = "1.26.18"
gitpython = "^3.1.31"
questionary = "^1.10.0"
sentence-transformers = "^2.2.2"
unstructured = "^0.6.10"
gpt4all = "^1.0.1"
langchain = ">=0.0.223,<0.0.326"
llama-cpp-python = "0.1.68"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Source" = "https://github.com/rsaryev/talk-codebase"
"Bug Tracker" = "https://github.com/rsaryev/talk-codebase/issues"

[tool.poetry.scripts]
talk-codebase = "talk_codebase.cli:main"


